--- a/web/package.json
+++ b/web/package.json
@@ -24,7 +24,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
-		"mdsvex": "^0.11.2",
+		"mdsvex": "^0.12.3",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^5.0.0-next.1",
@@ -34,5 +34,9 @@
 		"vite": "^5.0.3",
 		"vitest": "^2.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"rehype-slug": "^6.0.0",
+		"remark-unwrap-images": "^4.0.1"
+	}
 }
