--- a/.github/workflows/web-checks.yaml
+++ b/.github/workflows/web-checks.yaml
@@ -67,8 +67,8 @@ jobs:
       - name: Unit tests
         run: npm run test:unit
 
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
+      # - name: Install Playwright Browsers
+      #   run: npx playwright install --with-deps
 
-      - name: Playwright tests
-        run: npm run test:integration
+      # - name: Playwright tests
+      #   run: npm run test:integration
