--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "test:unit": "vitest"
   },
   "devDependencies": {
+    "@floating-ui/dom": "^1.6.12",
     "@iconify/svelte": "^4.0.2",
     "@playwright/test": "^1.28.1",
     "@skeletonlabs/skeleton": "^2.10.2",
