--- a/web/.prettierrc
+++ b/web/.prettierrc
@@ -4,6 +4,7 @@
   "singleQuote": true,
   "printWidth": 100,
   "proseWrap": "always",
+  "bracketSameLine": true,
   "plugins": [
     "prettier-plugin-svelte",
     "@trivago/prettier-plugin-sort-imports",
