--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "vite dev",
+    "dev": "concurrently \"npm run dev:vite\" \"npm run dev:fastapi\"",
+    "dev:fastapi": "PYTHONPATH=../python uvicorn api.index:app --reload",
+    "dev:vite": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
     "check": "npm run check:svelte && npm run check:format && npm run check:lint",
@@ -30,8 +32,9 @@
     "@types/eslint": "^9.0.0",
     "@types/node": "^22.7.5",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.0",
     "contentful": "^11.2.1",
-    "eslint": "9.14.0",
+    "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.45.1",
     "globals": "^15.0.0",
