Initial working implementation of contentful

--- a/web/package.json
+++ b/web/package.json
@@ -6,16 +6,17 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "npm run test:integration && npm run test:unit",
     "check": "npm run check:svelte && npm run check:format && npm run check:lint",
     "check:format": "prettier --write .",
     "check:lint": "eslint .",
     "check:svelte": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:svelte:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "test": "npm run test:integration && npm run test:unit",
     "test:integration": "playwright test",
     "test:unit": "vitest"
   },
   "devDependencies": {
+    "@contentful/rich-text-html-renderer": "^17.0.0",
     "@floating-ui/dom": "^1.6.12",
     "@iconify/svelte": "^4.0.2",
     "@playwright/test": "^1.28.1",
@@ -29,6 +30,7 @@
     "@types/eslint": "^9.6.0",
     "@types/node": "^22.7.5",
     "autoprefixer": "^10.4.20",
+    "contentful": "^11.2.1",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.45.1",
