--- a/.github/workflows/web-checks.yaml
+++ b/.github/workflows/web-checks.yaml
@@ -6,6 +6,11 @@ defaults:
   run:
     working-directory: ./web
 
+env:
+  CONTENTFUL_SPACE_ID: ${{ secrets.CONTENTFUL_SPACE_ID }}
+  CONTENTFUL_ACCESS_TOKEN: ${{ secrets.CONTENTFUL_ACCESS_TOKEN }}
+  CONTENTFUL_PREVIEW_ACCESS_TOKEN: ${{ secrets.CONTENTFUL_PREVIEW_ACCESS_TOKEN }}
+
 jobs:
   check:
     name: Checks
