--- a/web/package.json
+++ b/web/package.json
@@ -27,11 +27,11 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@tailwindcss/typography": "^0.5.14",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/eslint": "^9.6.0",
+    "@types/eslint": "^9.0.0",
     "@types/node": "^22.7.5",
     "autoprefixer": "^10.4.20",
     "contentful": "^11.2.1",
-    "eslint": "^9.0.0",
+    "eslint": "9.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.45.1",
     "globals": "^15.0.0",
