--- a/web/package.json
+++ b/web/package.json
@@ -35,7 +35,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.45.1",
     "globals": "^15.0.0",
-    "mdsvex": "^0.12.3",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.2.6",
     "prettier-plugin-tailwindcss": "^0.6.5",
@@ -48,9 +47,5 @@
     "vite-plugin-tailwind-purgecss": "^0.3.3",
     "vitest": "^2.0.0"
   },
-  "type": "module",
-  "dependencies": {
-    "rehype-slug": "^6.0.0",
-    "remark-unwrap-images": "^4.0.1"
-  }
+  "type": "module"
 }
