--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@contentful/rich-text-html-renderer": "^17.0.0",
+    "@contentful/rich-text-types": "^17.0.0",
     "@floating-ui/dom": "^1.6.12",
     "@iconify/svelte": "^4.0.2",
     "@playwright/test": "^1.28.1",
