--- a/.github/workflows/web-checks.yaml
+++ b/.github/workflows/web-checks.yaml
@@ -18,23 +18,26 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v4
+        run_install: false
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 22
+          cache: 'pnpm'
 
       - name: Install Dependencies
-        run: npm install
+        run: pnpm install
 
       - name: Check Svelte
-        run: npm run check:svelte
+        run: pnpm run check:svelte
 
       - name: Check Lint
-        run: npm run check:lint
+        run: pnpm run check:lint
 
       - name: Check Formatting
-        run: npm run check:format
+        run: pnpm run check:format
 
   build:
     name: Build
@@ -42,17 +45,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v4
+        run_install: false
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 22
+          cache: 'pnpm'
 
       - name: Install Dependencies
-        run: npm install
+        run: pnpm install
 
       - name: Build
-        run: npm run build
+        run: pnpm run build
 
   test:
     name: Test
@@ -60,20 +66,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v4
+        run_install: false
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 22
+          cache: 'pnpm'
 
       - name: Install Dependencies
-        run: npm install
+        run: pnpm install
 
       - name: Unit tests
-        run: npm run test:unit
-
-      # - name: Install Playwright Browsers
-      #   run: npx playwright install --with-deps
-
-      # - name: Playwright tests
-      #   run: npm run test:integration
+        run: pnpm run test:unit
