--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "check:lint": "eslint .",
     "check:svelte": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:svelte:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "gen:supabase-types": "source .env.local && supabase gen types typescript --project-id $SUPABASE_PROJECT_ID > src/lib/db/supabase/supabase.model.ts",
     "test": "npm run test:integration && npm run test:unit",
     "test:integration": "playwright test",
     "test:unit": "vitest"
@@ -23,6 +24,7 @@
     "@playwright/test": "^1.28.1",
     "@skeletonlabs/skeleton": "^2.10.2",
     "@skeletonlabs/tw-plugin": "^0.4.0",
+    "@supabase/supabase-js": "^2.47.2",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.5.27",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
@@ -39,6 +41,7 @@
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.2.6",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "supabase": "^2.0.0",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^3.4.9",
