--- a/web/.env.example
+++ b/web/.env.example
@@ -8,5 +8,5 @@ CONTENTFUL_ACCESS_TOKEN=...
 CONTENTFUL_PREVIEW_ACCESS_TOKEN=...
 
 ## Supabase
-SUPABASE_PROJECT_ID=...
+SUPABASE_URL=...
 SUPABASE_ANON_KEY=...
